trying to fix minor visual error with projects-container and the tab-bar on mobile browsers.

--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,8 @@
 }
 
 :root {
+    touch-action: pan-x pan-y;
+    overscroll-behavior: none;
     background-image: url("/src/assets/background-gradient.gif");
     backdrop-filter: blur(1px);
     background-repeat: no-repeat;
