--- a/src/presentation/sections/home/StyleHome.css
+++ b/src/presentation/sections/home/StyleHome.css
@@ -3,6 +3,10 @@
     text-transform: uppercase;
 }
 
+.home-container {
+    height: 100dvh;
+}
+
 .techIconsContainer{
     display: flex;
     justify-content: center;
