--- a/src/presentation/sections/projects/StyleProjects.css
+++ b/src/presentation/sections/projects/StyleProjects.css
@@ -1,8 +1,11 @@
 @media (max-width: 1100px) {
-    .projects-container {display: block; align-self: center; gap: 20px}
+    .projects-container {display: block; gap: 10px; align-items: center}
 }
 
 .project-card {
+    align-self: center;
+    align-items: center;
+    align-content: center;
     background-color: var(--dark-purple);
     width: 30%;
     min-width: 290px;
